Migrate from UUID to tsid
